--- a/themes/admin/templates/stats.html.twig
+++ b/themes/admin/templates/stats.html.twig
@@ -9,10 +9,7 @@
         };
     </style>
 {% endblock %}
-{% block javascripts %}
-    {{ parent() }}
-    {% do assets.addJS('https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js') %}
-{% endblock %}
+
 {% block titlebar %}
     <div class="button-bar">
         <div class="button-group">
@@ -41,311 +38,84 @@
 {% endblock %}
 {% block content %}
     {% set conf = config.plugins['page-stats'] %}
+    {% set siteStats = stats.siteSummary %}
     {% include 'partials/messages.html.twig' %}
     <div class="container-fluid">
         <div class="row">
             {% if conf.show_page_views_widget %}
-                <div class="mb-5 col-{{ conf.cols_page_views_widget }}">
-                    <h5>
-                        Page Views
-
-                    </h5>
-                    <div style="width: w-100">
-                        <canvas id="chart_hits"></canvas>
-                    </div>
-                </div>
+                {% include 'widgets/page-views.html.twig' with {'data': siteStats.hits} %}
             {% endif %}
             {% if conf.show_unique_visitors_widget %}
-                <div class="mb-5 col-{{ conf.cols_unique_visitors_widget }}">
-                    <h5>
-                        Unique Visitors
-
-                    </h5>
-                    <div style="width: w-100">
-                        <canvas id="chart_ips"></canvas>
-                    </div>
-                </div>
+                {% include 'widgets/unique-visitors.html.twig'with {'data': siteStats.visitors} %}
             {% endif %}
             {% if conf.show_unique_users_widget %}
-                <div class="mb-5 col-{{ conf.cols_unique_users_widget }}">
-                    <h5>
-                        Unique Users
-
-                    </h5>
-                    <div style="width: w-100">
-                        <canvas id="chart_users"></canvas>
-                    </div>
-                </div>
+                {% include 'widgets/unique-users.html.twig' with {'data': siteStats.users} %}
             {% endif %}
             {% if conf.show_top_users_widget %}
-                <div class="mb-5 col-{{ conf.cols_top_users_widget }}">
+                {% include 'widgets/top-users.html.twig' with {'data': stats.topUsers(conf.limit_top_users_widget)} %}
+            {% endif %}
+            {% if conf.show_top_countries %}
+                {% include 'widgets/top-countries.html.twig' with {'data': stats.topCountries(conf.limit_top_countries)} %}
+            {% endif %}
+            {% if conf.show_top_browsers %}
+                {% include 'widgets/top-browsers.html.twig' with {'data': stats.topBrowsers(conf.limit_top_browsers)} %}
+            {% endif %}
+            {% if conf.show_top_platforms %}
+                {% include 'widgets/top-platforms.html.twig' with {'data': stats.topPlatforms(conf.limit_top_platforms)} %}
+            {% endif %}
+            {% if conf.show_recently_viewed_pages %}
+                {% include 'widgets/recently-viewed-pages.html.twig' with {'data': stats.recentPagesByDay(conf.limit_recently_viewed_pages)}  %}
+            {% endif %}
+            {% if conf.show_top_pages %}
+                <div class="col-{{ conf.cols_top_pages }}">
                     <h5>
-                        Top Users
+                        Most Viewed Pages
 
                     </h5>
                     <table class="table">
                         <tr>
                             <th>
-                                User
+                                Page
 
                             </th>
                             <th>
-                                Page Views
+                                Views
+
+                            </th>
+                            <th>
+                                Unique visitors
+
+                            </th>
+                            <th>
+                                Unique logged in Users
 
                             </th>
                         </tr>
-                        {% for s in stats.topUsers(conf.limit_top_users_widget) %}
+                        {% for s in stats.pagesSummary(conf.limit_top_pages_pages) %}
                             <tr>
                                 <td>
-                                        <a class="me-2"  href="user-details?user={{ s.user|default(s.ip) }}" title="view information about {{ s.user|default(s.ip) }}">
-                                            <i class="fa fa-fw fa-line-chart"></i>
-                                        </a>
-                                    {{ s.user|default('not logged in') }}
+                                    <a class="me-2" title="view page" target="blank" href="{{ s.route }}">
+                                        <i class="fa fa-external-link"></i>
+                                    </a>
+                                    <a class="me-2" title="view page stats" href="page-details?page={{ s.route }}" title="{{ s.route }}">
+                                        <i class="fa fa-fw fa-line-chart"></i>
+                                    </a>
+                                    {{ s.page_title }}
                                 </td>
                                 <td>
                                     {{ s.hits }}
+                                </td>
+                                <td>
+                                    {{ s.visitors }}
+                                </td>
+                                <td>
+                                    {{ s.users }}
                                 </td>
                             </tr>
                         {% endfor %}
                     </table>
                 </div>
             {% endif %}
-            {% if conf.show_top_countries %}
-                <div class="mb-5 col-{{ conf.cols_top_countries }}">
-                    <h5>
-                        Top Countries
-
-                    </h5>
-                    <table class="table">
-                        <tr>
-                            <th>
-                                Country
-
-                            </th>
-                            <th>
-                                Page Views
-
-                            </th>
-                        </tr>
-                        {% for s in stats.topCountries(conf.limit_top_countries) %}
-                            <tr>
-                                <td>
-                                    <img src="https://flagcdn.com/24x18/{{ s.country|lower }}.png">
-                                        {{ s.country }}
-                                    </td>
-                                    <td>
-                                        {{ s.hits }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
-                {% if conf.show_top_browsers %}
-                    <div class="mb-5 col-{{ conf.cols_top_browsers }}">
-                        <h5>
-                            Top Browsers
-
-                        </h5>
-                        <table class="table">
-                            <tr>
-                                <th>
-                                    Browser
-
-                                </th>
-                                <th>
-                                    % share
-
-                                </th>
-                                <th>
-                                    Page Views
-
-                                </th>
-                            </tr>
-                            {% for s in stats.topBrowsers(conf.limit_top_browsers) %}
-                                <tr>
-                                    <td>
-                                        {{ s.browser }}
-                                    </td>
-                                    <td>
-                                        {{ s.share }}
-                                        %
-
-                                    </td>
-                                    <td>
-                                        {{ s.hits }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
-                {% if conf.show_top_platforms %}
-                    <div class="mb-5 col-{{ conf.cols_top_platforms }}">
-                        <h5>
-                            Top Platforms
-
-                        </h5>
-                        <table class="table">
-                            <tr>
-                                <th>
-                                    Platform
-
-                                </th>
-                                <th>
-                                    % share
-
-                                </th>
-                                <th>
-                                    Page Views
-
-                                </th>
-                            </tr>
-                            {% for s in stats.topPlatforms(conf.limit_top_platforms) %}
-                                <tr>
-                                    <td>
-                                        {{ s.platform }}
-                                    </td>
-                                    <td>
-                                        {{ s.share }}
-                                        %
-
-                                    </td>
-                                    <td>
-                                        {{ s.hits }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
-                {% if conf.show_recently_viewed_pages %}
-                    <div class="col-{{ conf.cols_recently_viewed_pages }}">
-                        <h5>
-                            Recently Viewed Pages
-
-                        </h5>
-                        <table class="table">
-                            <tr>
-                                <th>
-                                    Date
-
-                                </th>
-                                <th>
-                                    Page
-
-                                </th>
-                                <th>
-                                    user
-
-                                </th>
-                                <th>
-                                    Location
-
-                                </th>
-                                <th>
-                                    Browser
-
-                                </th>
-                                <th>
-                                    Platform
-
-                                </th>
-                            {# <th>Views</th> #}
-                            </tr>
-                            {% for s in stats.recentPages(conf.limit_recently_viewed_pages) %}
-                                <tr>
-                                    <td>
-                                        {{ s.date|date }}
-                                    </td>
-                                    <td class="w-100">
-                                        <a class="me-2" title="view page" target="blank" href="{{ s.route }}">
-                                            <i class="fa fa-external-link"></i>
-                                        </a>
-                                        <a class="me-2" title="view page stats" href="page-details?page={{ s.route }}" title="{{ s.route }}">
-                                            <i class="fa fa-fw fa-line-chart"></i>
-                                        </a>
-                                        {{ s.page_title }}
-                                    </td>
-                                    <td>
-                                        <a class="me-2"  href="user-details?user={{ s.user|default(s.ip) }}" title="view information about {{ s.user|default(s.ip) }}">
-                                            <i class="fa fa-fw fa-line-chart"></i>
-                                        </a>
-                                        {{ s.user|default(s.ip) }}
-                                    </td>
-                                    <td>
-                                        {{ s.city }}
-                                        -
-
-
-                                        {{ s.country }}
-                                    </td>
-                                    {# <td>{{s.hits}}</td> #}
-                                    <td>
-                                        {{ s.browser }}
-                                    </td>
-                                    <td>
-                                        {{ s.platform }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
-                {% if conf.show_top_pages %}
-                    <div class="col-{{ conf.cols_top_pages }}">
-                        <h5>
-                            Most Viewed Pages
-
-                        </h5>
-                        <table class="table">
-                            <tr>
-                                <th>
-                                    Page
-
-                                </th>
-                                <th>
-                                    Views
-
-                                </th>
-                                <th>
-                                    Unique visitors
-
-                                </th>
-                                <th>
-                                    Unique logged in Users
-
-                                </th>
-                            </tr>
-                            {% for s in stats.pagesSummary(conf.limit_top_pages_pages) %}
-                                <tr>
-                                    <td>
-                                        <a class="me-2" title="view page" target="blank" href="{{ s.route }}">
-                                            <i class="fa fa-external-link"></i>
-                                        </a>
-                                        <a class="me-2" title="view page stats" href="page-details?page={{ s.route }}" title="{{ s.route }}">
-                                            <i class="fa fa-fw fa-line-chart"></i>
-                                        </a>
-                                        {{ s.page_title }}
-                                    </td>
-                                    <td>
-                                        {{ s.hits }}
-                                    </td>
-                                    <td>
-                                        {{ s.visitors }}
-                                    </td>
-                                    <td>
-                                        {{ s.users }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
-            </div>
         </div>
-        {% set siteStats = stats.siteSummary %}
-        <script>
-        {% include 'partials/charts.html.twig' %}
-    </script>
-    {% endblock %}
+    </div>
+{% endblock %}
