fix: no limit on all pages

--- a/themes/admin/templates/all-pages.html.twig
+++ b/themes/admin/templates/all-pages.html.twig
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
 
-           {% include 'widgets/top-pages.html.twig' with {'title': 'All pages', 'hide_show_all': true, 'data': pageStats.db.pagesSummary() }  %}
+           {% include 'widgets/top-pages.html.twig' with {'title': 'All pages', 'hide_show_all': true, 'data': pageStats.db.pagesSummary(0) }  %}
 
         </div>
     </div>
