fix: db file and size not were shown after refactoring

--- a/themes/admin/templates/stats.html.twig
+++ b/themes/admin/templates/stats.html.twig
@@ -14,16 +14,7 @@
     <div class="button-bar">
         <div class="button-group">
             <p>
-                Using:
-
-
-                {{ stats.dbStats.path }}
-                (
-
-                {{ stats.dbStats.mb }}
-                MB)
-
-
+                Using: {{ pageStats.db.dbStats.path }} ({{ pageStats.db.dbStats.mb }} MB)
             </p>
         </div>
     </div>
