--- a/themes/admin/templates/widgets/top-browsers.html.twig
+++ b/themes/admin/templates/widgets/top-browsers.html.twig
@@ -1,31 +1,6 @@
-<div class="mb-5 {{ conf.cols_top_browsers }}">
-    <h5>
-        Top Browsers
-
-    </h5>
-    <table class="table table-hover">
-        <tr>
-            <th>
-                Browser
-
-            </th>
-            <th>
-                % share
-            </th>
-
-        </tr>
-        {% for s in data %}
-            <tr>
-                <td>
-                    {{ s.browser }}
-                </td>
-                <td>
-                    <span title="{{ s.hits }} views">{{ s.share }}
-                        %</span>
-
-                </td>
-
-            </tr>
-        {% endfor %}
-    </table>
-</div>
+{% set conf = config.plugins['page-stats'] %}
+{% if conf.style_top_browsers == 'table' %}
+    {% include 'widgets/top-browsers-table.html.twig' %}
+{% else %}
+        {% include 'widgets/top-browsers-pie.html.twig' %}
+{% endif %}
