--- a/themes/admin/templates/widgets/top-platforms.html.twig
+++ b/themes/admin/templates/widgets/top-platforms.html.twig
@@ -1,27 +1,6 @@
-<div class="mb-5 {{ conf.cols_top_platforms }}">
-    <h5>
-        Top Platforms
-
-    </h5>
-    <table class="table table-hover">
-        <tr>
-            <th>
-                Platform
-
-            </th>
-            <th>
-                % share
-            </th>
-        </tr>
-        {% for s in data %}
-            <tr>
-                <td>
-                    {{ s.platform }}
-                </td>
-                <td>
-                    <span title="{{s.hits}}">{{ s.share }} %</span>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-</div>
+{% set conf = config.plugins['page-stats'] %}
+{% if conf.style_top_platforms == 'table' %}
+    {% include 'widgets/top-platforms-table.html.twig' %}
+{% else %}
+        {% include 'widgets/top-platforms-pie.html.twig' %}
+{% endif %}
