--- a/themes/admin/templates/widgets/top-countries.html.twig
+++ b/themes/admin/templates/widgets/top-countries.html.twig
@@ -1,28 +1,6 @@
-<div class="mb-5 {{ conf.cols_top_countries }}">
-    <h5>
-        Top Countries
-
-    </h5>
-    <table class="table table-hover">
-        <tr>
-            <th>
-                Country
-
-            </th>
-            <th>
-                % share
-            </th>
-        </tr>
-        {% for s in data %}
-            <tr>
-                <td>
-                    <img src="https://flagcdn.com/24x18/{{ s.country|lower }}.png">
-                    {{ s.country }}
-                </td>
-                <td>
-                    <span title="{{ s.hits }}">{{s.share}} %</span>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-</div>
+{% set conf = config.plugins['page-stats'] %}
+{% if conf.style_top_browsers == 'table' %}
+    {% include 'widgets/top-countries-table.html.twig' %}
+{% else %}
+        {% include 'widgets/top-countries-pie.html.twig' %}
+{% endif %}
