--- a/themes/admin/templates/widgets/top-countries-table.html.twig
+++ b/themes/admin/templates/widgets/top-countries-table.html.twig
@@ -1,28 +1,23 @@
-<div class="mb-5 {{ conf.cols_top_countries }}">
-    <h5>
-        Top Countries
+<table class="table table-hover">
+    <tr>
+        <th>
+            Country
 
-    </h5>
-    <table class="table table-hover">
+        </th>
+        <th>
+            % share
+        </th>
+    </tr>
+    {% for s in data %}
         <tr>
-            <th>
-                Country
-
-            </th>
-            <th>
-                % share
-            </th>
+            <td>
+                <img src="https://flagcdn.com/24x18/{{ s.country|lower }}.png">
+                {{ s.country }}
+            </td>
+            <td>
+                <span title="{{ s.hits }}">{{s.share}}
+                    %</span>
+            </td>
         </tr>
-        {% for s in data %}
-            <tr>
-                <td>
-                    <img src="https://flagcdn.com/24x18/{{ s.country|lower }}.png">
-                    {{ s.country }}
-                </td>
-                <td>
-                    <span title="{{ s.hits }}">{{s.share}} %</span>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-</div>
+    {% endfor %}
+</table>
