--- a/themes/admin/templates/widgets/top-countries.html.twig
+++ b/themes/admin/templates/widgets/top-countries.html.twig
@@ -1,6 +1,13 @@
-{% set conf = config.plugins['page-stats'] %}
-{% if conf.style_top_browsers == 'table' %}
-    {% include 'widgets/top-countries-table.html.twig' %}
-{% else %}
+<div class="mb-5 {{ conf.cols_top_countries }}">
+    <h5 class=" d-flex justify-content-between mb-2">
+        Top Countries
+         {% if hide_show_all is not defined %}<a href="{{ pageStats.urls.topCountries }}"> View all</a>{% endif %}
+    </h5>
+
+    {% set conf = config.plugins['page-stats'] %}
+    {% if conf.style_top_countries == 'table' %}
+        {% include 'widgets/top-countries-table.html.twig' %}
+    {% else %}
         {% include 'widgets/top-countries-pie.html.twig' %}
-{% endif %}
+    {% endif %}
+</div>
