feat: show all countries

--- a/themes/admin/templates/widgets/recently-viewed-pages.html.twig
+++ b/themes/admin/templates/widgets/recently-viewed-pages.html.twig
@@ -1,7 +1,7 @@
 <div class="mb-5  col-12{{ conf.cols_recently_viewed_pages }}">
-    <h5 class="d-flex justify-content-between pe-2">
+    <h5 class="pe-2 d-flex justify-content-between">
         Recently Viewed Pages
-        {% if hide_show_all is not defined %}<a href="{{ pageStats.urls.allPages }}"> View all</a>{% endif %}
+        {% if hide_show_all is not defined %}<a href="{{ pageStats.urls.allPages }}"> <i class="fa fa-fw fa-line-chart"></i> View all</a>{% endif %}
     </h5>
 
     <table class="table table-hover">
