--- a/themes/admin/templates/widgets/top-platforms-table.html.twig
+++ b/themes/admin/templates/widgets/top-platforms-table.html.twig
@@ -1,27 +1,22 @@
-<div class="mb-5 {{ conf.cols_top_platforms }}">
-    <h5>
-        Top Platforms
+<table class="table table-hover">
+    <tr>
+        <th>
+            Platform
 
-    </h5>
-    <table class="table table-hover">
+        </th>
+        <th>
+            % share
+        </th>
+    </tr>
+    {% for s in data %}
         <tr>
-            <th>
-                Platform
-
-            </th>
-            <th>
-                % share
-            </th>
+            <td>
+                {{ s.platform }}
+            </td>
+            <td>
+                <span title="{{s.hits}}">{{ s.share }}
+                    %</span>
+            </td>
         </tr>
-        {% for s in data %}
-            <tr>
-                <td>
-                    {{ s.platform }}
-                </td>
-                <td>
-                    <span title="{{s.hits}}">{{ s.share }} %</span>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-</div>
+    {% endfor %}
+</table>
